--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-    <header>
+    <section class="barra-navegacion">
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
             <a class="navbar-brand" href="#">Dinoka Corp</a>
@@ -19,19 +19,21 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Juegos</a>
+                    <a class="nav-link active" aria-current="page" href="HTML/juegos.html">Juegos</a>
+                </li>
+                    <li class="nav-item">
+                    <a class="nav-link" href="HTML/consolas.html">Consolas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Consolas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Componentes</a>
+                    <a class="nav-link" href="HTML/componentes.html">Componentes</a>
                 </li>
                 </ul>
             </div>
             </div>
         </nav>
-    </header>
+        <main class="container" style="margin-top:0px;"></main> 
+    </section>
+    
 
 
 
