--- a/index.html
+++ b/index.html
@@ -9,30 +9,57 @@
 
 </head>
 <body>
-    <section class="barra-navegacion">
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-            <a class="navbar-brand" href="#">Dinoka Corp</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="HTML/juegos.html">Juegos</a>
-                </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="HTML/consolas.html">Consolas</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="HTML/componentes.html">Componentes</a>
-                </li>
-                </ul>
-            </div>
-            </div>
+    <header class="header">
+        <div class="header-icon">
+          <img src="img/dinocorp.png" alt="logo de Dinoka Corp">
+        </div>
+        <nav class="header-links">
+          <a href="pages/juegos.html">Juegos</a>
+          <a href="pages/consolas.html">Consolas</a>
         </nav>
-        <main class="container" style="margin-top:0px;"></main> 
+    </header>
+    <section class="company-section">
+        <div class="company-name">
+          <h1>Dinoka Corp</h1>
+        </div>
+        <div class="company-description">
+          <p>Somos una tienda especializada en videojuegos y consolas. Nuestra pasión por los juegos nos impulsa a ofrecer la mejor selección de títulos, desde clásicos hasta las últimas novedades. ¡Explora nuestro catálogo y encuentra tus juegos favoritos!</p>
+        </div>
     </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <div class="card" style="width: 10rem;">
+        <img src="img/Assassin's_Creed_IV_-_Black_Flag_cover.jpg" class="card-img-top" alt="Assassin's_Creed_IV_-_Black_Flag">
+        <div class="card-body">
+          <p class="card-text">Assassin's Creed IV: Black Flag es un videojuego de acción y aventura y sigilo desarrollado por Ubisoft Montreal</p>
+        </div>
+    </div>    
     
 
 
