Prueba de footer excitosa

--- a/index.html
+++ b/index.html
@@ -27,39 +27,50 @@
         </div>
     </section>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-    <div class="card" style="width: 10rem;">
-        <img src="img/Assassin's_Creed_IV_-_Black_Flag_cover.jpg" class="card-img-top" alt="Assassin's_Creed_IV_-_Black_Flag">
-        <div class="card-body">
-          <p class="card-text">Assassin's Creed IV: Black Flag es un videojuego de acción y aventura y sigilo desarrollado por Ubisoft Montreal</p>
+    <section class="products-section">
+        <div class="container">
+          <div class="row">
+            <div class="col-md-4 mb-4">
+              <div class="card">
+                <img src="img/Assassin's_Creed_IV_-_Black_Flag_cover.jpg" class="card-img-top" alt="Assassin's_Creed_IV_-_Black_Flag">
+                <div class="card-body">
+                  <p class="card-text">Assassin's Creed IV: Black Flag es un videojuego de acción y aventura y sigilo desarrollado por Ubisoft Montreal</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="card">
+                <img src="img/RedDead.jpg" class="card-img-top" alt="Ejemplo de Red Dead Redemption2">
+                <div class="card-body">
+                  <p class="card-text">Embárcate en una épica aventura en el Viejo Oeste con "Red Dead Redemption 2".</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-md-4 mb-4">
+              <div class="card">
+                <img src="img/Portal.jpg" class="card-img-top" alt="Imagen de Portal2">
+                <div class="card-body">
+                  <p class="card-text">Portal 2": Resuelve enigmas, usa portales y desafía las leyes de la física en este juego de rompecabezas ingenioso.</p>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-    </div>    
+      </section>
+
+      <footer class="footer">
+        <div class="footer-container">
+          <div class="footer-icons">
+            <a href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png" alt="Facebook"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
+            <a href="https://www.twitter.com/" target="_blank"><img src="img/twitter.png" alt="Twitter"></a>
+          </div>
+          <p class="footer-copyright">&copy; 2023 Dinoka Corp. Todos los derechos reservados.</p>
+          <div class="footer-logo">
+            <img src="img/dinocorp.png" alt="Logo Dinoka Corp">
+          </div>
+        </div>
+      </footer>
     
 
 
