--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinoka Corp</title>
+    <!-- Enlace a la hoja de estilos principal -->
     <link rel="stylesheet" href="CSS/styles.css">
+    <!-- Enlace a la hoja de estilos de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
-
 </head>
 <body>
+    <!-- Encabezado -->
     <header class="header">
         <div class="header-icon">
           <img src="img/dinocorp.png" alt="logo de Dinoka Corp">
@@ -18,26 +20,31 @@
           <a href="pages/consolas.html">Consolas</a>
         </nav>
     </header>
+    
+    <!-- Sección de la compañía -->
     <section class="company-section">
         <div class="company-name">
           <h1>Dinoka Corp</h1>
         </div>
         <div class="company-description">
-          <p>Somos una tienda especializada en videojuegos y consolas. Nuestra pasión por los juegos nos impulsa a ofrecer la mejor selección de títulos, desde clásicos hasta las últimas novedades. ¡Explora nuestro catálogo y encuentra tus juegos favoritos!</p>
+          <p>Somos una tienda especializada en videojuegos y consolas...</p>
         </div>
     </section>
 
+    <!-- Sección de productos -->
     <section class="products-section">
         <div class="container">
           <div class="row">
+            <!-- Tarjeta 1 -->
             <div class="col-md-4 mb-4">
               <div class="card">
                 <img src="img/Assassin's_Creed_IV_-_Black_Flag_cover.jpg" class="card-img-top" alt="Assassin's_Creed_IV_-_Black_Flag">
                 <div class="card-body">
-                  <p class="card-text">Assassin's Creed IV: Black Flag es un videojuego de acción y aventura y sigilo desarrollado por Ubisoft Montreal</p>
+                  <p class="card-text">Assassin's Creed IV: Black Flag es un videojuego de acción...</p>
                 </div>
               </div>
             </div>
+            <!-- Tarjeta 2 -->
             <div class="col-md-4 mb-4">
               <div class="card">
                 <img src="img/RedDead.jpg" class="card-img-top" alt="Ejemplo de Red Dead Redemption2">
@@ -46,6 +53,7 @@
                 </div>
               </div>
             </div>
+            <!-- Tarjeta 3 -->
             <div class="col-md-4 mb-4">
               <div class="card">
                 <img src="img/Portal.jpg" class="card-img-top" alt="Imagen de Portal2">
@@ -56,31 +64,27 @@
             </div>
           </div>
         </div>
-      </section>
+    </section>
 
-      <footer class="footer">
+    <!-- Pie de página -->
+    <footer class="footer">
         <div class="footer-container">
+          <!-- Iconos de redes sociales -->
           <div class="footer-icons">
             <a href="https://www.facebook.com/" target="_blank"><img src="img/facebook.png" alt="Facebook"></a>
             <a href="https://www.instagram.com/" target="_blank"><img src="img/instagram.png" alt="Instagram"></a>
             <a href="https://www.twitter.com/" target="_blank"><img src="img/twitter.png" alt="Twitter"></a>
           </div>
+          <!-- Copyright -->
           <p class="footer-copyright">&copy; 2023 Dinoka Corp. Todos los derechos reservados.</p>
+          <!-- Logo en el pie de página -->
           <div class="footer-logo">
             <img src="img/dinocorp.png" alt="Logo Dinoka Corp">
           </div>
         </div>
-      </footer>
-    
+    </footer>
 
-
-
-
-
-
-
-
-
+    <!-- Enlace al archivo JavaScript de Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
 </body>
 </html>
