--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h1>Dinoka Corp</h1>
         </div>
         <div class="company-description">
-          <p>Somos una tienda especializada en videojuegos y consolas...</p>
+          <p>Somos una tienda especializada en videojuegos y consolas. Nuestra pasión por los juegos nos impulsa a ofrecer la mejor selección de títulos, desde clásicos hasta las últimas novedades. ¡Explora nuestro catálogo y encuentra tus juegos favoritos!</p>
         </div>
     </section>
 
