--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
         <nav class="header-links">
           <a href="pages/juegos.html">Juegos</a>
           <a href="pages/consolas.html">Consolas</a>
+          <a href="pages/contacto.html">Contacto</a>
+          <a href="pages/componentes.html">Componentes</a>
         </nav>
     </header>
     
@@ -38,7 +40,7 @@
             <!-- Tarjeta 1 -->
             <div class="col-md-4 mb-4">
               <div class="card">
-                <img src="img/Assassin's_Creed_IV_-_Black_Flag_cover.jpg" class="card-img-top" alt="Assassin's_Creed_IV_-_Black_Flag">
+                <img src="img/assa.jpg" class="card-img-top" alt="Assassin's_Creed_IV_-_Black_Flag">
                 <div class="card-body">
                   <p class="card-text">Assassin's Creed IV: Black Flag es un videojuego de acción...</p>
                 </div>
@@ -49,16 +51,16 @@
               <div class="card">
                 <img src="img/RedDead.jpg" class="card-img-top" alt="Ejemplo de Red Dead Redemption2">
                 <div class="card-body">
-                  <p class="card-text">Embárcate en una épica aventura en el Viejo Oeste con "Red Dead Redemption 2".</p>
+                  <p class="card-text">Embárcate en una épica aventura en el Viejo Oeste con "Red...</p>
                 </div>
               </div>
             </div>
             <!-- Tarjeta 3 -->
             <div class="col-md-4 mb-4">
               <div class="card">
-                <img src="img/Portal.jpg" class="card-img-top" alt="Imagen de Portal2">
+                <img src="img/Portal2.jpg" class="card-img-top" alt="Imagen de Portal2">
                 <div class="card-body">
-                  <p class="card-text">Portal 2": Resuelve enigmas, usa portales y desafía las leyes de la física en este juego de rompecabezas ingenioso.</p>
+                  <p class="card-text">Portal 2": Resuelve enigmas, usa portales y desafía las leyes de la...</p>
                 </div>
               </div>
             </div>
