Desarrolle el archivo componentes.html

--- a/index.html
+++ b/index.html
@@ -33,12 +33,63 @@
         </div>
     </section>
 
+    <section class="carousel-section">
+      <div id="carouselExampleCaptions" class="carousel slide">
+        <div class="carousel-indicators">
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+          <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+        </div>
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="img/componentes.jpeg" class="d-block w-100" alt="Componentes-Cascos">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Auriculares</h5>
+              <p>¡Nuestros exploradores necesitan la mejor escucha para su aventura!</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/Juegos.png" class="d-block w-100" alt="Juegos variados">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>¡Explora!¡Lucha!¡Diviertete!</h5>
+              <p>¡Elije tu camino! Tenemos una variedad de aventuras para ti.</p>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <img src="img/raton.jpg" class="d-block w-100" alt="Mouse gamer">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>¡Ratones Gamer!</h5>
+              <p>¿Que es el cazador sin una buena punteria? ¡Desarrolla tu aim de la mejor manera!.</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+      </div>
+    </section>
+
+    <!-- Sección de ejemplos de juegos -->
+    <section class="company-section">
+      <div class="company-name">
+        <h2>¡Todos tus juegos favoritos, en un mismo lugar!</h2>
+      </div>
+      <div class="company-description">
+        <p>Elije entre nuestra variedad de los mejores juegos para ti.</p>
+      </div>
+    </section>
+
     <!-- Sección de productos -->
     <section class="products-section">
         <div class="container">
           <div class="row">
             <!-- Tarjeta 1 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 col-sm-6 col-12 mb-4">
               <div class="card">
                 <img src="img/assa.jpg" class="card-img-top" alt="Assassin's_Creed_IV_-_Black_Flag">
                 <div class="card-body">
@@ -47,7 +98,7 @@
               </div>
             </div>
             <!-- Tarjeta 2 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 col-sm-6 col-12 mb-4">
               <div class="card">
                 <img src="img/RedDead.jpg" class="card-img-top" alt="Ejemplo de Red Dead Redemption2">
                 <div class="card-body">
@@ -56,7 +107,7 @@
               </div>
             </div>
             <!-- Tarjeta 3 -->
-            <div class="col-md-4 mb-4">
+            <div class="col-md-4 col-sm-6 col-12 mb-4">
               <div class="card">
                 <img src="img/Portal2.jpg" class="card-img-top" alt="Imagen de Portal2">
                 <div class="card-body">
