Contacto agregado y correcciones hechas

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <p>Somos una tienda especializada en videojuegos y consolas. Nuestra pasión por los juegos nos impulsa a ofrecer la mejor selección de títulos, desde clásicos hasta las últimas novedades. ¡Explora nuestro catálogo y encuentra tus juegos favoritos!</p>
         </div>
     </section>
-
+    <!-- Sección de carrusel-->
     <section class="carousel-section">
       <div id="carouselExampleCaptions" class="carousel slide">
         <div class="carousel-indicators">
