--- a/pages/componentes.html
+++ b/pages/componentes.html
@@ -14,10 +14,10 @@
             <img src="../img/dinocorp.png" alt="logo de Dinoka Corp">
         </div>
         <nav class="header-links">
-            <a href="pages/componentes.html">Componentes</a>
-            <a href="pages/contacto.html">Contacto</a>
+            <a href="componentes.html">Componentes</a>
+            <a href="contacto.html">Contacto</a>
             <a href="../index.html">Juegos</a>
-            <a href="pages/consolas.html">Consolas</a>
+            <a href="consolas.html">Consolas</a>
         </nav>
     </header>
         <!-- Sección de componentes -->
