--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -20,7 +20,7 @@
         </nav>
     </header>
     
-    <!-- Sección de compañía (nombre de la página) -->
+    <!-- Titulo de la pagina -->
     <section class="company-section">
         <div class="company-name">
             <h1>Contacto</h1>
@@ -41,9 +41,8 @@
                     <li><strong>Oficina Sucursal:</strong> 456 Avenida del herrero, Carrera Blanca</li>
                 </ul>
             </div>
-            <!-- Icono circular grande -->
+            <!--  icono   -->
             <div class="contact-icon">
-                <!-- Agrega aquí la imagen del icono circular -->
                 <img src="../img/contacto.png" alt="Icono circular de contacto">
             </div>
         </div>
